[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/img/botones/bloque.png" type="Texture" id=2]
[ext_resource path="res://scenes/Block.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=6]
radius = 28.3586
height = 321.712

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.407843 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Block" type="Control"]
margin_top = 15.59
margin_right = 328.0
margin_bottom = 72.59
mouse_default_cursor_shape = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
text = "derecha"
smol = true

[node name="ConnectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectArea"]
visible = false
position = Vector2( 161.172, 83.8503 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Shadow" type="Panel" parent="ConnectArea"]
margin_left = -18.0
margin_top = 57.0
margin_right = 342.0
margin_bottom = 111.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 164, 36 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="bloque" type="Sprite" parent="Area2D"]
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Area2D"]
margin_left = -165.0
margin_top = -34.0
margin_right = 163.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "Mover	               pasos arriba"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PoolVector2Array( 165.5, -32.4, 165.5, 25, 160.3, 30, -86.7, 30, -89.7, 33, -138.1, 33, -140.5, 30, -165.5, 30, -165.5, -33, 164.6, -33 )

[node name="LineEdit" type="LineEdit" parent="Area2D"]
margin_left = -70.0
margin_top = -20.41
margin_right = 2.0
margin_bottom = 10.59
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/cursor_color = Color( 0.368627, 0.368627, 0.368627, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 1
placeholder_text = "x"
placeholder_alpha = 0.2
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Node2D_gui_input"]
[connection signal="area_entered" from="Area2D" to="." method="_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_area_exited"]
